codestyle: List.copyOf (Java 10)